--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.8.9",
         "mongoose-unique-validator": "^2.0.3",
-        "underscore": "^1.9.2"
+        "multer": "^1.4.2",
+        "underscore": "^1.9.2",
+        "uuid": "^3.4.0"
     }
 }
